# get_NSEpreMarket_data

./: .gitignore  README.md  pyproject.toml
pre_market_extract/: main.py
