[tool.poetry]
name = "pre-market-extract"
version = "0.1.0"
description = ""
authors = ["AZarbade <adwaitzarbade@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
nsepython = "^2.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
